tests/NormalTests/paczka1/small_fuzzy/80820193.err
Error in line 1: CdTGN S920 39,7
Error in line 8: d09LvOdl A639 42,6
Error in line 9: d09LvOdl S804 158,3
